Prevent annotation from being hidden by footer.

--- a/scorystapp/static/css/style.css
+++ b/scorystapp/static/css/style.css
@@ -274,6 +274,7 @@ input {
   float: left;
   width: 90%;
   border: 1px solid #ccc;
+  margin-bottom: 120px;
 }
 
 .assessment-canvas img {
